# ocaml_dune

./: LICENSE.md  README.md  dune-project  ocaml_dune.opam
_build/: log
guides/: 0 FP and Why Ocaml.md  0. FP and why is it in Ocaml.md  1 Basic Ocaml.md  1. Ocaml in Dune.md  1. Play locally in Ocaml with Dune.md  2 Dune Tutorial.md  2 Ocaml in Dune.md  2 Practical Ocaml.md  2. Learn Ocaml basis.md  3 Dune Cheet Sheet.md  3 Dune Tutorial.md  Notes: Safe Concurrent OCaml.md  Ocaml is Different but Easier.md  Safe Concurrent OCaml.md  When Failure is Not an Option: A Practical Case for OCaml.md  presentation.md
lib/: calc.ml  calc.mli  dune
test/: dune  test_ocaml_dune.ml
